--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron": "^4.0.6"
   },
   "dependencies": {
-    "electron-json-storage": "^4.1.6"
+    "electron-json-storage": "^4.1.6",
+    "electron-context-menu": "^2.0.1"
   }
 }
