--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "electron-json-storage": "^4.1.6",
-    "electron-context-menu": "^2.0.1"
+    "electron-context-menu": "^2.0.1",
+    "open": "^7.0.4"
   }
 }
