embedded daemon & miner

--- a/package.json
+++ b/package.json
@@ -13,8 +13,20 @@
     "electron": "^4.0.6"
   },
   "dependencies": {
-    "electron-json-storage": "^4.1.6",
+    "app-root-dir": "^1.0.2",
     "electron-context-menu": "^2.0.1",
+    "electron-json-storage": "^4.1.6",
     "open": "^7.0.4"
+  },
+  "build": {
+    "extraFiles": [
+      {
+        "from": "resources/${os}",
+        "to": "resources/bin",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ]
   }
 }
