--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "app-root-dir": "^1.0.2",
     "electron-context-menu": "^2.0.1",
     "electron-json-storage": "^4.1.6",
+    "nbonjour": "^3.6.3",
     "open": "^7.0.4"
   },
   "build": {
